Fix unaligned memory accesses in enchant (bug #51289)